# hyssonite

./: Dockerfile  README.md  hyssonite.cabal  image-scraping-service.cabal  package.yaml  stack.yaml
exec/: Main.hs
src/: Camo.hs  Main.hs  Scraper.hs  Server.hs  Strings.hs
src/Scraper/: Deviantart.hs  Interface.hs  Internal.hs  Tumblr.hs
src/Scraper/Internal/: DOM.hs  HTTP.hs  MonadHTTP.hs
test/: HTTPCassette.hs  ServerSpec.hs
test/Scraper/: DeviantartSpec.hs  InterfaceSpec.hs  MainSpec.hs  TumblrSpec.hs
