name:                hyssonite
version:             0.1.0.0
synopsis:            Haskell Ymage Scraper Service
-- description:
homepage:            https://github.com/little-bobby-tables/image-scraping-service
license:             PublicDomain
license-file:        LICENSE
author:              little-bobby-tables
maintainer:          whitediamond@fanuniverse.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hyssonite
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    exceptions,
    transformers,
    bytestring,
    blaze-builder,
    http-conduit,
    http-client,
    http-client-tls,
    http-types,
    resourcet,
    conduit,
    tagsoup,
    fast-tagsoup,
    regex-pcre,
    warp,
    wai,
    aeson
  -- ghc-options:      -Wall

test-suite spec
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  main-is:            Spec.hs
  hs-source-dirs:     test, src
  ghc-options:        -v0
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    exceptions,
    transformers,
    bytestring,
    blaze-builder,
    http-conduit,
    http-client,
    http-client-tls,
    http-types,
    resourcet,
    conduit,
    tagsoup,
    fast-tagsoup,
    regex-pcre,
    warp,
    wai,
    aeson,
    cryptohash,
    pretty-hex,
    directory,
    binary,
    case-insensitive,
    hspec,
    hspec-wai,
    hspec-wai-json
