name:                image-scraping-service
version:             0.1.0.0
synopsis:            Image scraping service with a straightforward API.
-- description:
homepage:            https://github.com/little-bobby-tables/image-scraping-service
license:             PublicDomain
license-file:        LICENSE
author:              little-bobby-tables
maintainer:          whitediamond@fanuniverse.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable image-scraping-service
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:
    src,
    src/Scraper
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    http-conduit,
    resourcet,
    conduit,
    hxt,
    regex-pcre
